--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -1,11 +1,19 @@
 body {
-  padding: 3rem 1.2rem;
+  padding: 2.4rem 1.2rem 0rem 1.2rem;
 }
 
-.form {
-  min-width: 80%;
+.container {
+  align-self: flex-start;
+}
+
+form {
+  min-width: 85%;
 }
 
 .todo-container {
   min-width: 90%;
+}
+
+.task-list {
+  height: 16rem;
 }
