--- a/css/style.css
+++ b/css/style.css
@@ -96,8 +96,8 @@ form {
 }
 
 .task-list {
-  height: 25vh;
   width: 100%;
+  height: 15rem;
   list-style: none;
   overflow-y: auto;
 }
@@ -187,12 +187,19 @@ form {
 
 @media screen and (max-width: 500px) {
   body {
-    padding: 3rem 1.2rem;
+    padding: 2.4rem 1.2rem 0rem 1.2rem;
   }
-  .form {
-    min-width: 80%;
+  .container {
+    -ms-flex-item-align: start;
+        align-self: flex-start;
+  }
+  form {
+    min-width: 85%;
   }
   .todo-container {
     min-width: 90%;
+  }
+  .task-list {
+    height: 16rem;
   }
 }
